@@ -5,6 +5,7 @@ import com.sparta.msa_exam.product.dto.ProductSearchResDto;
 import com.sparta.msa_exam.product.entity.Product;
 import com.sparta.msa_exam.product.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -27,11 +28,12 @@ public class ProductServiceImpl implements ProductService{
     }
 
     @Override
+    @Cacheable(cacheNames = "productCache", key = "getMethodName()")
     public List<ProductSearchResDto> getProducts() {
         return productRepository.findAll()
                 .stream()
                 .map(ProductSearchResDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
